force-app/main/default/objects/NotaFiscal__c/NotaFiscal__c.object-meta.xml
<CustomObject>
    <description>Gestão de Notas Fiscais vinculadas aos ciclos de faturamento.</description>
    <enableFeeds>false</enableBulkApi>
    <enableReports>true</enableHistory>
    <enableSharing>true</enableSearch>
    <label>Nota Fiscal</label>
    <nameField>
        <displayFormat>NF-{000000}</displayFormat>
        <label>Número NF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas Fiscais</label>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>