force-app/main/default/objects/NotaFiscal__c/fields/CNPJ_Emissor__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_Emissor__c</fullName>
    <label>CNPJ Emissor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>