force-app/main/default/objects/NotaFiscal__c/fields/CNPJ_Receptor__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_Receptor__c</fullName>
    <label>CNPJ Receptor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>