force-app/main/default/objects/NotaFiscal__c/fields/DocumentoId__c.field-meta.xml
<CustomField>
    <fullName>DocumentoId__c</fullName>
    <description>ID do ContentDocument no Salesforce.</description>
    <label>ID do Documento</label>
    <length>18</length>
    <type>Text</type>
</CustomField>