force-app/main/default/objects/NotaFiscal__c/fields/MotivoReprovacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoReprovacao__c</fullName>
    <label>Motivo da Reprovação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>