force-app/main/default/objects/NotaFiscal__c/fields/NomeEmitente__c.field-meta.xml
<CustomField>
    <fullName>NomeEmitente__c</fullName>
    <label>Nome do Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>