force-app/main/default/objects/NotaFiscal__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciclo ao qual esta nota fiscal pertence.</description>
    <label>Período</label>
    <referenceTo>Periodo__c</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <required>false</relationshipName>
    <trackTrending>false</trackHistory>
    <type>Lookup</type>
</CustomField>