force-app/main/default/objects/NotaFiscal__c/fields/Preenchimento__c.field-meta.xml
<CustomField>
    <fullName>Preenchimento__c</fullName>
    <description>Indica se os dados da nota foram extraídos automaticamente via IA ou preenchidos manualmente pelo usuário.</description>
    <label>Preenchimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</required>
        <valueSetDefinition>
            <value>
                <fullName>Automático</fullName>
                <default>true</default>
                <label>Automático</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>