force-app/main/default/objects/NotaFiscal__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Indica se a nota é de entrada (recebida de colaborador) ou saída (emitida pela empresa).</description>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</required>
        <valueSetDefinition>
            <value>
                <fullName>Entrada</fullName>
                <default>true</default>
                <label>Entrada</label>
            </value>
            <value>
                <fullName>Saída</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>